# rustFrida

./: Cargo.toml  README.md
agent/: build.rs
agent/src/: communication.rs  gumlibc.rs  hide_soinfo.c  jhook.rs  lib.rs  qbdi_trace.rs  quickjs_loader.rs  recompiler.rs  relocater.rs  stalker.rs  trace.rs
frida-gum-sys/src/: lib.rs
frida-gum/src/: cpu_context.rs
frida-gum/src/stalker/: transformer.rs
ldmonitor/: build.rs
ldmonitor-common/src/: lib.rs
ldmonitor/src/: lib.rs  main.rs
loader/: build_helpers.py  empty_so.c  loader.c
loader/helpers/: bootstrapper.c  elf-parser.h  nolibc-compat.h  rustfrida-loader.c  syscall.c
qbdi/: Cargo.toml
qbdi-helper/src/: trace_api.rs
qbdi/QBDI/: Config.h  Version.h
qbdi/src/: ffi.rs  lib.rs  state.rs  vm.rs
quickjs-hook/: build.rs
quickjs-hook/src/: context.rs  hook_engine.h  hook_engine_art.c  hook_engine_mem.c  hook_engine_oat_patch.c  lib.rs  value.rs
quickjs-hook/src/jsapi/: callback_util.rs  hook_api.rs  memory.rs  module.rs  ptr.rs
quickjs-hook/src/jsapi/hook_api/: callback.rs  functions.rs  mod.rs  registry.rs
quickjs-hook/src/jsapi/java/: art_controller.rs  art_method.rs  callback.rs  java_boot.js  jni_core.rs  mod.rs
quickjs-hook/src/jsapi/java/callback/: invoke.rs  (+1 more)
quickjs-hook/src/recomp/: mod.rs  page.rs  recomp_page.c  recomp_page.h
rust_frida/: Cargo.toml  build.rs
rust_frida/.cargo/: config.toml
rust_frida/src/: agent.rs  args.rs  communication.rs  injection.rs  logger.rs  main.rs  process.rs  props.rs  repl.rs  selinux.rs  spawn.rs  stalker.rs  transform.c  types.rs
(+1 files in other folders)
